tests/any2mochi/cpp/dataset.cpp.error
tests/compiler/cpp/dataset.cpp.out: line 14:33: clang++: exit status 1: <stdin>:14:33: error: 'auto' not allowed in template argument
13:                         Person{string("Charlie"), 65}};
14:>>>   auto names = ([&]() -> vector<auto> {
                                    ^
15:        vector<auto> _res;
line 15:12: clang++: exit status 1: <stdin>:15:12: error: 'auto' not allowed in template argument
14:      auto names = ([&]() -> vector<auto> {
15:>>>     vector<auto> _res;
               ^
16:        for (auto &p : people) {
